--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-glacier</artifactId>
+		</dependency>
 		<!-- 
 		<dependency>
             <groupId>jakarta.xml.bind</groupId>
