--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-kms</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-dynamodb</artifactId>
+		</dependency>
 		<!-- 
 		<dependency>
             <groupId>jakarta.xml.bind</groupId>
