--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-dynamodb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-sqs</artifactId>
+		</dependency>		
 		<!-- 
 		<dependency>
             <groupId>jakarta.xml.bind</groupId>
