--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-lambda</artifactId>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.amazonaws</groupId>
+		  <artifactId>aws-encryption-sdk-java</artifactId>
+		  <version>2.4.0</version>
+		</dependency>    		
 		<!-- 
 		<dependency>
             <groupId>jakarta.xml.bind</groupId>
