--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,10 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-lambda</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-rds</artifactId>
+		</dependency>
 		<dependency>
 		  <groupId>com.amazonaws</groupId>
 		  <artifactId>aws-encryption-sdk-java</artifactId>
